[package]
name = "platformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_rapier2d = { version = "0.11.0", features = [ "simd-stable", "render" ] }
bevy_prototype_lyon = "0.3.1"
bevy = { version = "0.5.0", features = [ "dynamic" ] }
